add youtube clone to my portfolio

--- a/index.html
+++ b/index.html
@@ -302,7 +302,8 @@
 
             <!-- About Section Button -->
             <div class="text-center mt-4">
-                <a class="btn btn-xl btn-outline-light" href="https://drive.google.com/file/d/1EviI7bwCXQMeHr0ifCG67sOwfOH3cdSg/view?usp=sharing" target="_blank">
+                <a class="btn btn-xl btn-outline-light" href="https://drive.google.com/file/d/1EviI7bwCXQMeHr0ifCG67sOwfOH3cdSg/view?usp=sharing
+                " target="_blank">
                     <i class="fas fa-download mr-2"></i>Resume</a>
             </div>
 
@@ -823,9 +824,9 @@
                                 <!-- Portfolio Modal - Image -->
                                 <img class="img-fluid rounded mb-5" src="img/portfolio/proj-32.jpg" alt="">
                                 <!-- Portfolio Modal - Text -->
-                                <p class="mb-5">COMING SOON! COMING SOON! COMING SOON!</p>
+                                <p class="mb-5">23:50/August 9/2020 - YouTube Clone Done!</p>
                                 <button class="btn btn-primary" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close</button>
-                                <a class="btn btn-primary" href="#" target="_blank">See Page</a>
+                                <a class="btn btn-primary" href="https://clone-uz.web.app/" target="_blank">See Page</a>
                             </div>
                         </div>
                     </div>
