create item and append to item list & position item

--- a/projects/28-jsProjects/11-toDoList/index.html
+++ b/projects/28-jsProjects/11-toDoList/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="container">
-      <div class="feedback hide">write value for item</div>
+      <div class="feedback hide"></div>
       <form class="form">
         <h1>To Do List</h1>
         <input class="inp" type="text" /><button type="submit" class="addBtn">
@@ -16,12 +16,14 @@
         </button>
         <div class="items">
           <div class="itemList">
-            <h5 class="itemText"></h5>
-            <div class="itemIcons hide">
-              <a href="#" class="itemIcon complete">ok</a>
-              <a href="#" class="itemIcon edit">ed</a>
-              <a href="#" class="itemIcon delete">del</a>
-            </div>
+            <!-- <div class="item">
+              <h5 class="itemText">${value}</h5>
+              <div class="itemIcons">
+                <a href="#" class="itemIcon complete"><img src="img/check.svg" alt="check icon"/></a>
+                <a href="#" class="itemIcon complete"><img src="img/edit.svg" alt="edit icon"/></a>
+                <a href="#" class="itemIcon complete"><img src="img/delete.svg" alt="delete icon"/></a>
+              </div>
+            </div> -->
           </div>
           <button class="clearBtn">Clear Items</button>
         </div>
