clear itemData & remove item(s)

--- a/projects/28-jsProjects/11-toDoList/index.html
+++ b/projects/28-jsProjects/11-toDoList/index.html
@@ -25,9 +25,11 @@
               </div>
             </div> -->
           </div>
-          <button class="clearBtn">Clear Items</button>
         </div>
       </form>
+      <div class="clearBtnContainer">
+        <button class="clearBtn">Clear Items</button>
+      </div>
     </div>
     <script src="app.js"></script>
   </body>
