--- a/projects/28-jsProjects/11-toDoList/index.html
+++ b/projects/28-jsProjects/11-toDoList/index.html
@@ -1,36 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ToDoList</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <div class="container">
-      <div class="feedback hide"></div>
-      <form class="form">
-        <h1>To Do List</h1>
-        <input class="inp" type="text" /><button type="submit" class="addBtn">
-          Add Item
-        </button>
-        <div class="items">
-          <div class="itemList">
-            <!-- <div class="item">
-              <h5 class="itemText">${value}</h5>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>ToDoList</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+  <div class="container">
+    <div class="feedback hide"></div>
+    <form class="form">
+      <h1>To Do List</h1>
+      <input class="inp" type="text" /><button type="submit" class="addBtn">
+        Add Item
+      </button>
+      <div class="items">
+        <div class="itemList">
+          <!-- <div class="item">
+              <h5 class="itemText">${singleItem}</h5>
               <div class="itemIcons">
                 <a href="#" class="itemIcon complete"><img src="img/check.svg" alt="check icon"/></a>
-                <a href="#" class="itemIcon complete"><img src="img/edit.svg" alt="edit icon"/></a>
-                <a href="#" class="itemIcon complete"><img src="img/delete.svg" alt="delete icon"/></a>
+                <a href="#" class="itemIcon edit"><img src="img/edit.svg" alt="edit icon"/></a>
+                <a href="#" class="itemIcon delete"><img src="img/close.svg" alt="delete icon"/></a>
               </div>
             </div> -->
-          </div>
         </div>
-      </form>
-      <div class="clearBtnContainer">
-        <button class="clearBtn">Clear Items</button>
       </div>
+    </form>
+    <div class="clearBtnContainer">
+      <button class="clearBtn">Clear Items</button>
     </div>
-    <script src="app.js"></script>
-  </body>
+  </div>
+  <script src="app.js"></script>
+</body>
+
 </html>
