add comments to 11-todoList

--- a/projects/28-jsProjects/11-toDoList/index.html
+++ b/projects/28-jsProjects/11-toDoList/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <div class="container">
-    <div class="feedback hide"></div>
+    <div class="feedback"></div>
     <form class="form">
       <h1>To Do List</h1>
       <div class="formInput">
@@ -20,19 +20,17 @@
         </button>
       </div>
       <div class="itemList">
-        <div class="item">
-          <!-- <h5 class="itemText">${singleItem}</h5>
+        <!-- <div class="item">
+          <h5 class="itemText">${singleItem}</h5>
           <div class="itemIcons">
             <a href="#" class="itemIcon complete"><img src="img/check.svg" alt="check icon" /></a>
             <a href="#" class="itemIcon edit"><img src="img/edit.svg" alt="edit icon" /></a>
             <a href="#" class="itemIcon delete"><img src="img/close.svg" alt="delete icon" /></a>
-          </div> -->
-        </div>
+          </div>
+        </div> -->
       </div>
     </form>
-    <div class="clearBtnContainer">
-      <button class="btn clearBtn">Clear Items</button>
-    </div>
+    <button class="btn clearBtn">Clear Items</button>
   </div>
   <script src="app.js"></script>
 </body>
