add uznetflix to my portfolio

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                     </div>
                 </div>
 
-                <!-- Portfolio Item 32 -->
+                <!-- Portfolio Item 34 -->
                 <div class="col-md-6 col-lg-4">
                     <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal32">
                         <div
@@ -239,6 +239,21 @@
                         <img class="img-fluid" src="img/portfolio/proj-32.jpg" alt="">
                     </div>
                 </div>
+
+                <!-- Portfolio Item 33 -->
+                <div class="col-md-6 col-lg-4">
+                    <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal33">
+                        <div
+                            class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                            <div class="portfolio-item-caption-content text-center text-white">
+                                <i class="fas fa-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img class="img-fluid" src="img/portfolio/proj-34.jpg" alt="">
+                    </div>
+                </div>
+
+
 
             </div>
             <!-- /.row -->
@@ -909,7 +924,46 @@
                                 <p class="mb-5">23:50/August 9/2020 - YouTube Clone Done!</p>
                                 <button class="btn btn-primary" href="#" data-dismiss="modal"><i
                                         class="fas fa-times fa-fw"></i>Close</button>
-                                <a class="btn btn-primary" href="https://clone-uz.web.app/" target="_blank">See Page</a>
+                                <a class="btn btn-primary" href="https://uzutube.web.app/" target="_blank">See Page</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Portfolio Modal 33 -->
+    <div class="portfolio-modal modal fade" id="portfolioModal33" tabindex="-1" role="dialog"
+        aria-labelledby="portfolioModal33Label" aria-hidden="true">
+        <div class="modal-dialog modal-xl" role="document">
+            <div class="modal-content">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true"><i class="fas fa-times"></i></span>
+                </button>
+                <div class="modal-body text-center">
+                    <div class="container">
+                        <div class="row justify-content-center">
+                            <div class="col-lg-8">
+                                <!-- Portfolio Modal - Title -->
+                                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Uz Netflix</h2>
+                                <!-- Icon Divider -->
+                                <div class="divider-custom">
+                                    <div class="divider-custom-line"></div>
+                                    <div class="divider-custom-icon">
+                                        <i class="fas fa-star"></i>
+                                    </div>
+                                    <div class="divider-custom-line"></div>
+                                </div>
+                                <!-- Portfolio Modal - Image -->
+                                <img class="img-fluid rounded mb-5" src="img/portfolio/proj-34.jpg" alt="">
+                                <!-- Portfolio Modal - Text -->
+                                <p class="mb-5">23:30/August 19/2020 - Uz Netflix Done!</p>
+                                <!-- <p class="mb-5">17:30/August 13/2020 - Todo List Done!</p> -->
+                                <button class="btn btn-primary" href="#" data-dismiss="modal"><i
+                                        class="fas fa-times fa-fw"></i>Close</button>
+                                <a class="btn btn-primary" href="https://uznetflix.web.app/" target="_blank">See
+                                    Page</a>
                             </div>
                         </div>
                     </div>
