add 23-toDoList to fiftyProjects

--- a/projects/28-jsProjects/0-fiftyProjects/22-popup.html
+++ b/projects/28-jsProjects/0-fiftyProjects/22-popup.html
@@ -73,7 +73,7 @@
     </div>
   </div>
 
-  <!------------------------- javascript ----------------------------->
+  <!------------------ javascript -------------------->
   <script>
     const btn = document.querySelector("button");
     const wrapper = document.querySelector(".wrapper");
