--- a/projects/28-jsProjects/0-fiftyProjects/32-wordGuess.html
+++ b/projects/28-jsProjects/0-fiftyProjects/32-wordGuess.html
@@ -10,7 +10,10 @@
 <body>
   <h1>Word Guess</h1>
   <script>
-    // asdffs
+    window.addEventListener('load', init);
+    function init() {
+      console.log('loaded');
+    }
   </script>
 </body>
 
